{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 148,
  "lineage": "35c47d16-0ecc-a185-f041-30a7702e2965",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0156001f0548e90b1",
            "arn": "arn:aws:ec2:us-east-1:478810312658:instance/i-0a1e1053ec32c0f55",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a1e1053ec32c0f55",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "lab6-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-051f156ba7f894118"
              }
            ],
            "primary_network_interface_id": "eni-051f156ba7f894118",
            "private_dns": "ip-10-0-1-29.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.29",
            "public_dns": "ec2-44-204-107-172.compute-1.amazonaws.com",
            "public_ip": "44.204.107.172",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00aa83abfb78dce4b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01b59308a6fe53925",
            "tags": {
              "Name": "lab6-web-ec2",
              "Role": "web"
            },
            "tags_all": {
              "Name": "lab6-web-ec2",
              "Role": "web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0dc45559711a2620e"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "478810312658",
            "id": "i-0a1e1053ec32c0f55",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_subnet.public_1",
            "aws_vpc.lab6_vpc",
            "data.aws_ami.amazon_linux_2",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "lab6_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:478810312658:internet-gateway/igw-097b281efd7d2714a",
            "id": "igw-097b281efd7d2714a",
            "owner_id": "478810312658",
            "region": "us-east-1",
            "tags": {
              "Name": "lab6-igw"
            },
            "tags_all": {
              "Name": "lab6-igw"
            },
            "vpc_id": "vpc-0e3421d5bebfe8c34"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.lab6_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:478810312658:route-table/rtb-0f0a5ea9e4b4ae881",
            "id": "rtb-0f0a5ea9e4b4ae881",
            "owner_id": "478810312658",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-097b281efd7d2714a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lab6-public-rt"
            },
            "tags_all": {
              "Name": "lab6-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3421d5bebfe8c34"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "478810312658",
            "id": "rtb-0f0a5ea9e4b4ae881",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.lab6_igw",
            "aws_vpc.lab6_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca495a8eb2b0d283",
            "region": "us-east-1",
            "route_table_id": "rtb-0f0a5ea9e4b4ae881",
            "subnet_id": "subnet-01b59308a6fe53925"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.lab6_igw",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.lab6_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06916627d045fd6c1",
            "region": "us-east-1",
            "route_table_id": "rtb-0f0a5ea9e4b4ae881",
            "subnet_id": "subnet-000ae60b89b8c65a7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.lab6_igw",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.lab6_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:478810312658:security-group/sg-0dc45559711a2620e",
            "description": "Allow HTTP and SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dc45559711a2620e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "lab6-web-sg",
            "name_prefix": "",
            "owner_id": "478810312658",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lab6-web-sg"
            },
            "tags_all": {
              "Name": "lab6-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3421d5bebfe8c34"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "478810312658",
            "id": "sg-0dc45559711a2620e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.lab6_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:478810312658:subnet/subnet-01d72af76b3262d78",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d72af76b3262d78",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "478810312658",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "lab6-private-1",
              "Type": "private"
            },
            "tags_all": {
              "Name": "lab6-private-1",
              "Type": "private"
            },
            "vpc_id": "vpc-0e3421d5bebfe8c34"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "478810312658",
            "id": "subnet-01d72af76b3262d78",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.lab6_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:478810312658:subnet/subnet-020e97b9952debc41",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020e97b9952debc41",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "478810312658",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "lab6-private-2",
              "Type": "private"
            },
            "tags_all": {
              "Name": "lab6-private-2",
              "Type": "private"
            },
            "vpc_id": "vpc-0e3421d5bebfe8c34"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "478810312658",
            "id": "subnet-020e97b9952debc41",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.lab6_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:478810312658:subnet/subnet-01b59308a6fe53925",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b59308a6fe53925",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "478810312658",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "lab6-public-1",
              "Type": "public"
            },
            "tags_all": {
              "Name": "lab6-public-1",
              "Type": "public"
            },
            "vpc_id": "vpc-0e3421d5bebfe8c34"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "478810312658",
            "id": "subnet-01b59308a6fe53925",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.lab6_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:478810312658:subnet/subnet-000ae60b89b8c65a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-000ae60b89b8c65a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "478810312658",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "lab6-public-2",
              "Type": "public"
            },
            "tags_all": {
              "Name": "lab6-public-2",
              "Type": "public"
            },
            "vpc_id": "vpc-0e3421d5bebfe8c34"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "478810312658",
            "id": "subnet-000ae60b89b8c65a7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.lab6_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lab6_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:478810312658:vpc/vpc-0e3421d5bebfe8c34",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fca6a9e945957387",
            "default_route_table_id": "rtb-0865446d55223ec2b",
            "default_security_group_id": "sg-03a68127b188d8540",
            "dhcp_options_id": "dopt-0c890c014661c21a1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e3421d5bebfe8c34",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0865446d55223ec2b",
            "owner_id": "478810312658",
            "region": "us-east-1",
            "tags": {
              "Lab": "cloud-computing-6",
              "Name": "lab6-vpc"
            },
            "tags_all": {
              "Lab": "cloud-computing-6",
              "Name": "lab6-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "478810312658",
            "id": "vpc-0e3421d5bebfe8c34",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}